@@ -2,7 +2,7 @@
 
 # Home page is: http://smartmontools.sourceforge.net
 
-# $Id: smartd.conf 3128 2010-07-27 13:08:31Z chrfranke $
+# $Id: smartd.conf 3651 2012-10-18 15:11:36Z samm2 $
 
 # smartd will re-read the configuration file if it receives a HUP
 # signal
@@ -83,10 +83,11 @@ DEVICESCAN
 #/dev/twa0 -d 3ware,1 -a -s L/../../2/03
 
 # Monitor 2 SATA (not SAS) disks connected to a 3ware 9000 controller which
-# uses the 3w-sas driver (Linux, FreeBSD). Start long self-tests Tuesdays
+# uses the 3w-sas driver (Linux). Start long self-tests Tuesdays
 # between 1-2 and 3-4 am.
+# On FreeBSD /dev/tws0 should be used instead
 #/dev/twl0 -d 3ware,0 -a -s L/../../2/01
-#/dev/twa0 -d 3ware,1 -a -s L/../../2/03
+#/dev/twl0 -d 3ware,1 -a -s L/../../2/03
 
 # Same as above for Windows. Option '-d 3ware,N' is not necessary,
 # disk (port) number is specified in device name.
