@@ -2,7 +2,7 @@
 Copyright (C) 2002-10 Bruce Allen <smartmontools-support@lists.sourceforge.net>
 Copyright (C) 2004-12 Christian Franke <smartmontools-support@lists.sourceforge.net>
 
-$Id: smartd.conf.5.in 3638 2012-10-09 19:35:25Z chrfranke $
+$Id: smartd.conf.5.in 3651 2012-10-18 15:11:36Z samm2 $
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -197,8 +197,14 @@ Section below!
 .B # Two SATA (not SAS) disks on a 3ware 9750 controller.
 .B # Start long self-tests Sundays between midnight and
 .B # 1am and 2-3 am
+.\" %IF OS Linux
 .B \ \ /dev/twl0 -d 3ware,0 -a -s L/../../7/00
 .B \ \ /dev/twl0 -d 3ware,1 -a -s L/../../7/02
+.\" %ENDIF OS Linux
+.\" %IF OS FreeBSD
+.B \ \ /dev/tws0 -d 3ware,0 -a -s L/../../7/00
+.B \ \ /dev/tws0 -d 3ware,1 -a -s L/../../7/02
+.\" %ENDIF OS FreeBSD
 .B #
 .nf
 .B # Three SATA disks on a HighPoint RocketRAID controller.
@@ -336,7 +342,7 @@ status fails, or if new errors appear in the self-test log.
 
 .B If a 3ware controller is used
 then the corresponding SCSI (/dev/sd?) or character device (/dev/twe?,
-/dev/twa? or /dev/twl?) must be listed, along with the \'\-d 3ware,N\'
+/dev/twa?, /dev/twl? or /dev/tws?) must be listed, along with the \'\-d 3ware,N\'
 Directive (see below).  The individual ATA disks hosted by the 3ware
 controller appear to \fBsmartd\fP as normal ATA devices.  Hence all
 the ATA directives can be used for these disks (but see note below).
@@ -1584,4 +1590,4 @@ SEE ALSO:
 
 .SH
 SVN ID OF THIS PAGE:
-$Id: smartd.conf.5.in 3638 2012-10-09 19:35:25Z chrfranke $
+$Id: smartd.conf.5.in 3651 2012-10-18 15:11:36Z samm2 $
