@@ -1,8 +1,9 @@
-$Id: ChangeLog 3650 2012-10-18 14:26:56Z samm2 $
+$Id: ChangeLog 3651 2012-10-18 15:11:36Z samm2 $
 
 2012-10-18  Alex Samorukov  <samm@os2.kiev.ua>
 	Compile fixes for Areca patch on FreeBSD.
 	Added support for the /dev/twsX (3ware 9750) controller on FreeBSD.
+	Manual pages updated with /dev/twsX device
 	FreeBSD: Migrate 3ware interface to ata_pass_through()
 
 2012-10-16  Christian Franke  <franke@computer.org>
